--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 <body>
     
 <!---Nav Section--->
+<section class=" max-w-4xl mx-auto">
 <section>
-    <div class=" max-w-4xl mx-auto navbar bg-base-100">
+    <div class=" navbar bg-base-100">
   <div class="navbar-start">
     <div class="dropdown">
       <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -45,14 +46,10 @@
       </label>
       <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
         <li><a>Item 1</a></li>
-        <li>
-          <a>Parent</a>
-          <ul class="p-2">
-            <li><a>Submenu 1</a></li>
-            <li><a>Submenu 2</a></li>
-          </ul>
-        </li>
-        <li><a>Item 3</a></li>
+        <li><a>Item 2 <i class="fa-solid fa-arrow-right"></i></a></li>
+        <li><a>Item 3 <i class="fa-solid fa-arrow-right"></i></a></li>
+        <li><a>Item 4 <i class="fa-solid fa-arrow-right"></i></a></li>
+        <li><a>Item 5 <i class="fa-solid fa-arrow-right"></i></a></li>
       </ul>
     </div>
     <img src="images/logo2.png" alt="">
@@ -60,23 +57,299 @@
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
       <li><a>Item 1</a></li>
-      <li tabindex="0">
-        <details>
-          <summary>Parent</summary>
-          <ul class="p-2">
-            <li><a>Submenu 1</a></li>
-            <li><a>Submenu 2</a></li>
-          </ul>
-        </details>
-      </li>
-      <li><a>Item 3</a></li>
+      <li><a>Item 2 <i class="fa-solid fa-arrow-right"></i></a></li>
+      <li><a>Item 3 <i class="fa-solid fa-arrow-right"></i></a></li>
+      <li><a>Item 4 <i class="fa-solid fa-arrow-right"></i></a></li>
+      <li><a>Item 5 <i class="fa-solid fa-arrow-right"></i></a></li>
     </ul>
   </div>
   <div class="navbar-end">
-    <a class="btn">Button</a>
+    <a class="btn bg-yellow-700 border-yellow-700 text-white lowercase">Free Consultation</a>
   </div>
 </div>
 </section>
-    
+
+<!----header-section---->
+<section class="py-6">
+    <div class="max-w-full mx-auto lg:max-w-4xl hero min-h-[calc(100vh-900px)]" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
+        <div class="hero-overlay bg-opacity-60"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div class="max-w-xl">
+            <h1 class="mb-5 text-5xl font-bold">We provide Effective Legal Solutions</h1>
+            <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae .</p>
+            <div class="join">
+                <input class="pr-36 lg:pr-56 mb-6 input input-bordered join-item rounded-lg" placeholder="search your service"/>
+              </div>
+            <button class="btn bg-yellow-700 border-yellow-700  text-white lowercase ">search</button>
+          </div>
+        </div>
+      </div>
+</section>    
+
+<!----Legal Practice-section---->
+<section>
+    <div class="max-w-lg mx-auto text-center py-14">
+        <h1 class="text-2xl lg:text-3xl py-3">The Legal Practice Area</h1>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+        suffered</p>
+    </div>
+
+    <!---Legal Practice-list-section---->
+    <section>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-1">
+                <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                    <figure><img class="pt-9" src="./images/business.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class=" justify-center card-title">Business Law</h2>
+                      <p class="text-center">There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                      <div class="card-actions justify-center">
+                        <button class="btn bg-yellow-700 border-yellow-700  text-white lowercase rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                    <figure><img class="pt-9" src="./images/criminal.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class=" justify-center card-title">Business Law</h2>
+                      <p class="text-center">There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                      <div class="card-actions justify-center">
+                        <button class="btn bg-yellow-700 border-yellow-700  text-white lowercase rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                    <figure><img class="pt-9" src="./images/child.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class=" justify-center card-title">Business Law</h2>
+                      <p class="text-center">There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                      <div class="card-actions justify-center">
+                        <button class="btn bg-yellow-700 border-yellow-700  text-white lowercase rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                    <figure><img class="pt-9" src="./images/education.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class=" justify-center card-title">Business Law</h2>
+                      <p class="text-center">There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                      <div class="card-actions justify-center">
+                        <button class="btn bg-yellow-700 border-yellow-700  text-white lowercase rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                    <figure><img class="pt-9" src="./images/divorce.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class=" justify-center card-title">Business Law</h2>
+                      <p class="text-center">There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                      <div class="card-actions justify-center">
+                        <button class="btn bg-yellow-700 border-yellow-700  text-white lowercase rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                    <figure><img class="pt-9" src="./images/tax.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class=" justify-center card-title">Business Law</h2>
+                      <p class="text-center">There are many variations of
+                        passages of Lorem Ipsum
+                        available, but the majority have
+                        suffered alteration in some
+                        form, by injected humour.</p>
+                      <div class="card-actions justify-center">
+                        <button class="btn bg-yellow-700 border-yellow-700  text-white lowercase rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+    </section>
+</section>
+
+    <!----our client feedback-section---->
+    <section>
+        <div class="max-w-sm lg:max-w-lg mx-auto text-center py-20">
+            <h1 class="text-2xl lg:text-3xl py-3">What Our Client Say</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration in some form, by injected humour.</p>
+        </div>
+
+        <!------section-->
+           <section>
+            <div class="carousel w-full">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <div class="max-w-full mx-auto lg:max-w-4xl hero min-h-[calc(100vh-900px)]" style="background-image: url(images/banner.png);">
+                            <div class="hero-content text-center">
+                              <div class="max-w-2xl">
+                                <div class="avatar">
+                                    <div class="w-12 rounded-full ring ring-white ring-offset-base-100 ring-offset-1">
+                                      <img src="./images/profile.png" />
+                                    </div>
+                                  </div>
+                                <h4 class="text-2xl font-bold  text-white">Safayet Ahmed</h4>
+                                <p class="text-base text-white">ui ux designer</p>
+                                <p class="py-6 text- text-white">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+                                    literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                                    College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+                                    <input type="radio" name="radio-6" class="radio radio-warning" checked />
+                                    <input type="radio" name="radio-6" class="radio radio-warning" />
+                              </div>
+                          </div>
+                        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a> 
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                  </div>
+                </div> 
+              </div>
+              <div id="slide2" class="carousel-item relative w-full">
+                <div class="max-w-full mx-auto lg:max-w-4xl hero min-h-[calc(100vh-900px)]" style="background-image: url(images/banner.png);">
+                        <div class="hero-content text-center">
+                          <div class="max-w-2xl">
+                            <div class="avatar">
+                                <div class="w-12 rounded-full ring ring-white ring-offset-base-100 ring-offset-1">
+                                  <img src="./images/profile.png" />
+                                </div>
+                              </div>
+                            <h4 class="text-2xl font-bold  text-white">Safayet Ahmed</h4>
+                            <p class="text-base text-white">ui ux designer</p>
+                            <p class="py-6 text- text-white">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+                                literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                                College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+                                <input type="radio" name="radio-6" class="radio radio-warning" checked />
+                                <input type="radio" name="radio-6" class="radio radio-warning" />
+                          </div>
+                      </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+          </div>
+          <div id="slide3" class="carousel-item relative w-full">
+            <div class="max-w-full mx-auto lg:max-w-4xl hero min-h-[calc(100vh-900px)]" style="background-image: url(images/banner.png);">
+                    <div class="hero-content text-center">
+                      <div class="max-w-2xl">
+                        <div class="avatar">
+                            <div class="w-12 rounded-full ring ring-white ring-offset-base-100 ring-offset-1">
+                              <img src="./images/profile.png" />
+                            </div>
+                          </div>
+                        <h4 class="text-2xl font-bold  text-white">Safayet Ahmed</h4>
+                        <p class="text-base text-white">ui ux designer</p>
+                        <p class="py-6 text- text-white">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+                            literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                            College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+                            <input type="radio" name="radio-6" class="radio radio-warning" checked />
+                            <input type="radio" name="radio-6" class="radio radio-warning" />
+                      </div>
+                  </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a> 
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+      </div>
+      <div id="slide4" class="carousel-item relative w-full">
+        <div class="max-w-full mx-auto lg:max-w-4xl hero min-h-[calc(100vh-900px)]" style="background-image: url(images/banner.png);">
+                <div class="hero-content text-center">
+                  <div class="max-w-2xl">
+                    <div class="avatar">
+                        <div class="w-12 rounded-full ring ring-white ring-offset-base-100 ring-offset-1">
+                          <img src="./images/profile.png" />
+                        </div>
+                      </div>
+                    <h4 class="text-2xl font-bold  text-white">Safayet Ahmed</h4>
+                    <p class="text-base text-white">ui ux designer</p>
+                    <p class="py-6 text- text-white">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+                        literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+                        College in Virginia, looked up one of the more obscure Latin words, consectetur</p>
+                        <input type="radio" name="radio-6" class="radio radio-warning" checked />
+                        <input type="radio" name="radio-6" class="radio radio-warning" />
+                  </div>
+              </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a href="#slide3" class="btn btn-circle">❮</a> 
+        <a href="#slide1" class="btn btn-circle">❯</a>
+      </div>
+    </div> 
+  </div>
+</div>
+</section>
+
+<!----FAQ Questions----->
+<section>
+    <div class="max-w-sm lg:max-w-lg mx-auto text-center pt-20">
+        <h1 class="text-2xl lg:text-3xl py-3">Frequently Asked Any Questions</h1>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+            suffered alteration in some form, by injected humour.</p>
+    </div>
+
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <div class="text-center lg:text-left">
+            <img src="images/faq.png" alt="">
+          </div>
+          <div class="card flex-shrink-0 w-full max-w-sm bg-base-100">
+            <div class="card-body">
+                <div class="collapse collapse-plus bg-base-200">
+                    <input type="radio" name="my-accordion-3" checked="checked" /> 
+                    <div class="collapse-title text-xl font-medium">
+                      Click to open this one and close others
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae libero reiciendis laboriosam dicta mollitia.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus bg-base-200">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-medium">
+                      Click to open this one and close others
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>hello</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus bg-base-200">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-medium">
+                      Click to open this one and close others
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>hello</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus bg-base-200">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-medium">
+                      Click to open this one and close others
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>hello</p>
+                    </div>
+                  </div>
+            </div>
+          </div>
+        </div>
+</section>
+
+</section>
 </body>
 </html>
