added all section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         suffered</p>
     </div>
 
-    <!---Legal Practice-list-section---->
+<!---Legal Practice-list-section---->
     <section>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-1">
                 <div class="outline-dotted card outline-yellow-400  bg-base-100">
@@ -185,7 +185,7 @@
     </section>
 </section>
 
-    <!----our client feedback-section---->
+<!----our client feedback-section---->
     <section>
         <div class="max-w-sm lg:max-w-lg mx-auto text-center py-20">
             <h1 class="text-2xl lg:text-3xl py-3">What Our Client Say</h1>
@@ -193,7 +193,7 @@
                 suffered alteration in some form, by injected humour.</p>
         </div>
 
-        <!------section-->
+<!------section-->
            <section>
             <div class="carousel w-full">
                 <div id="slide1" class="carousel-item relative w-full">
@@ -349,6 +349,67 @@
           </div>
         </div>
 </section>
+
+<!----contact with us section---->
+<section>
+    <div class="max-w-sm lg:max-w-lg mx-auto text-center pt-9 pb-4">
+        <h1 class="text-2xl lg:text-3xl py-3">Contact With Us</h1>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+        suffered alteratio.</p>
+    </div>
+
+    <div class="hero-content flex-col lg:flex-row-reverse">
+        <div class="collapse">
+            <input class="input input-bordered join-item rounded-xl  mb-5 text-sm" placeholder="Your name"/>
+            <input class="input input-bordered join-item rounded-xl  mb-5 text-sm" placeholder="Your name"/>
+            <input class="input input-bordered join-item rounded-xl mb-5 text-sm" placeholder="your email"/>
+            <input class="input input-bordered join-item rounded-xl mb-5 text-sm" placeholder="subject"/>
+            <input class="input input-bordered join-item rounded-xl mb-5 text-sm" placeholder="Address"/>
+            <textarea placeholder="Your Message" class="textarea textarea-bordered textarea-sm w-full max-w-3xl mb-5" ></textarea>
+            <button class="btn btn-wide w-full max-w-3xl bg-yellow-700 text-white rounded-xl">Send me message</button>
+          </div>
+        <div class="card flex-shrink-0 w-full max-w-sm bg-base-100">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-2">
+                <div class="card bg-base-100 outline-dotted ">
+                    <figure><img class="pt-10" src="./images/location.png" alt="Shoes" /></figure>
+                    <div class="card-body text-center">
+                      <h2 class="card-title justify-center">Address!</h2>
+                      <p class="text-sm">A108 Adam Street,
+                        New York, NY 535022</p>               
+                    </div>
+                  </div>
+                  <div class="card bg-base-100 outline-dotted">
+                    <figure><img class="pt-10"  src="./images/location.png" alt="Shoes" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="card-title justify-center">Address!</h2>
+                        <p class="text-sm">A108 Adam Street,
+                          New York, NY 535022</p>                
+                    </div>
+                  </div>
+                  <div class="card bg-base-100 outline-dotted">
+                    <figure><img class="pt-10"  src="./images/location.png" alt="Shoes" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="card-title justify-center">Address!</h2>
+                        <p class="text-sm">A108 Adam Street,
+                          New York, NY 535022</p>                
+                    </div>
+                  </div>
+                  <div class="card bg-base-100 outline-dotted">
+                    <figure><img class="pt-10"  src="./images/location.png" alt="Shoes" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="card-title justify-center">Address!</h2>
+                        <p class="text-sm">A108 Adam Street,
+                          New York, NY 535022</p>                
+                    </div>
+                  </div>
+            </div>
+        </div>
+      </div>
+ 
+</section>
+
+
+
 
 </section>
 </body>
