added last section

--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
         </div>
       </div>
 </section>    
+</section>
+
 
 <!----Legal Practice-section---->
+<section class=" max-w-4xl mx-auto">
 <section>
     <div class="max-w-lg mx-auto text-center py-14">
         <h1 class="text-2xl lg:text-3xl py-3">The Legal Practice Area</h1>
@@ -184,8 +187,10 @@
             </div>
     </section>
 </section>
+</section>
 
 <!----our client feedback-section---->
+<section class=" max-w-4xl mx-auto">
     <section>
         <div class="max-w-sm lg:max-w-lg mx-auto text-center py-20">
             <h1 class="text-2xl lg:text-3xl py-3">What Our Client Say</h1>
@@ -294,8 +299,10 @@
   </div>
 </div>
 </section>
+</section>
 
 <!----FAQ Questions----->
+<section class=" max-w-4xl mx-auto">
 <section>
     <div class="max-w-sm lg:max-w-lg mx-auto text-center pt-20">
         <h1 class="text-2xl lg:text-3xl py-3">Frequently Asked Any Questions</h1>
@@ -349,8 +356,11 @@
           </div>
         </div>
 </section>
+</section>
+
 
 <!----contact with us section---->
+<section class=" max-w-4xl mx-auto">
 <section>
     <div class="max-w-sm lg:max-w-lg mx-auto text-center pt-9 pb-4">
         <h1 class="text-2xl lg:text-3xl py-3">Contact With Us</h1>
@@ -405,12 +415,43 @@
             </div>
         </div>
       </div>
- 
+</section>
 </section>
 
-
-
-
-</section>
+<!----footer section---->
+<footer class="footer mt-14 p-10 bg-slate-900 text-white text-base-content">
+    <div>
+      <span class="footer-title">Services</span> 
+      <a class="link link-hover">Branding</a> 
+      <a class="link link-hover">Design</a> 
+      <a class="link link-hover">Marketing</a> 
+      <a class="link link-hover">Advertisement</a>
+    </div> 
+    <div>
+      <span class="footer-title">Company</span> 
+      <a class="link link-hover">About us</a> 
+      <a class="link link-hover">Contact</a> 
+      <a class="link link-hover">Jobs</a> 
+      <a class="link link-hover">Press kit</a>
+    </div> 
+    <div>
+      <span class="footer-title">Legal</span> 
+      <a class="link link-hover">Terms of use</a> 
+      <a class="link link-hover">Privacy policy</a> 
+      <a class="link link-hover">Cookie policy</a>
+    </div> 
+    <div>
+      <span class="footer-title">Newsletter</span> 
+      <div class="form-control w-80">
+        <label class="label">
+          <span class="label-text">Enter your email address</span>
+        </label> 
+        <div class="relative">
+          <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" /> 
+          <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+        </div>
+      </div>
+    </div>
+  </footer>  
 </body>
 </html>
