added last section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <!----header-section---->
 <section class="py-6">
-    <div class="max-w-full mx-auto lg:max-w-4xl hero min-h-[calc(100vh-900px)]" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
+    <div class="max-w-full mx-auto lg:max-w-4xl hero min-h-[calc(100vh-900px)]" style="background-image: url(./images/banner.png);">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
           <div class="max-w-xl">
