added all section

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
 <!---Legal Practice-list-section---->
     <section>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-1">
-                <div class="outline-dotted card outline-yellow-400  bg-base-100">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <div class=" border-b-2 border-r-2 card  bg-base-100">
                     <figure><img class="pt-9" src="./images/business.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class=" justify-center card-title">Business Law</h2>
@@ -114,7 +114,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                  <div class="border-r-2 border-b-2 card  bg-base-100">
                     <figure><img class="pt-9" src="./images/criminal.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class=" justify-center card-title">Business Law</h2>
@@ -128,7 +128,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                  <div class=" border-b-2 card bg-base-100">
                     <figure><img class="pt-9" src="./images/child.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class=" justify-center card-title">Business Law</h2>
@@ -142,7 +142,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                  <div class="border-r-2 border-b-2 card bg-base-100">
                     <figure><img class="pt-9" src="./images/education.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class=" justify-center card-title">Business Law</h2>
@@ -156,7 +156,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                  <div class="border-r-2 border-b-2 card bg-base-100">
                     <figure><img class="pt-9" src="./images/divorce.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class=" justify-center card-title">Business Law</h2>
@@ -170,7 +170,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="outline-dotted card outline-yellow-400  bg-base-100">
+                  <div class=" border-b-2 card bg-base-100">
                     <figure><img class="pt-9" src="./images/tax.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class=" justify-center card-title">Business Law</h2>
@@ -379,8 +379,8 @@
             <button class="btn btn-wide w-full max-w-3xl bg-yellow-700 text-white rounded-xl">Send me message</button>
           </div>
         <div class="card flex-shrink-0 w-full max-w-sm bg-base-100">
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-2">
-                <div class="card bg-base-100 outline-dotted ">
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+                <div class="card bg-base-100 border-b-2 border-r-2  ">
                     <figure><img class="pt-10" src="./images/location.png" alt="Shoes" /></figure>
                     <div class="card-body text-center">
                       <h2 class="card-title justify-center">Address!</h2>
@@ -388,7 +388,7 @@
                         New York, NY 535022</p>               
                     </div>
                   </div>
-                  <div class="card bg-base-100 outline-dotted">
+                  <div class="card bg-base-100 border-b-2 ">
                     <figure><img class="pt-10"  src="./images/location.png" alt="Shoes" /></figure>
                     <div class="card-body text-center">
                         <h2 class="card-title justify-center">Address!</h2>
@@ -396,7 +396,7 @@
                           New York, NY 535022</p>                
                     </div>
                   </div>
-                  <div class="card bg-base-100 outline-dotted">
+                  <div class="card bg-base-100 border-b-2 border-r-2 ">
                     <figure><img class="pt-10"  src="./images/location.png" alt="Shoes" /></figure>
                     <div class="card-body text-center">
                         <h2 class="card-title justify-center">Address!</h2>
@@ -404,7 +404,7 @@
                           New York, NY 535022</p>                
                     </div>
                   </div>
-                  <div class="card bg-base-100 outline-dotted">
+                  <div class="card bg-base-100 border-b-2 ">
                     <figure><img class="pt-10"  src="./images/location.png" alt="Shoes" /></figure>
                     <div class="card-body text-center">
                         <h2 class="card-title justify-center">Address!</h2>
@@ -419,36 +419,46 @@
 </section>
 
 <!----footer section---->
-<footer class="footer mt-14 p-10 bg-slate-900 text-white text-base-content">
-    <div>
-      <span class="footer-title">Services</span> 
-      <a class="link link-hover">Branding</a> 
-      <a class="link link-hover">Design</a> 
-      <a class="link link-hover">Marketing</a> 
-      <a class="link link-hover">Advertisement</a>
+<footer class="footer max-w-full mt-14 p-10 bg-slate-900 text-white text-base-content gap-8">
+    <div class="">
+      <span class="footer-title">
+        <figure><img class="pt-10" src="./images/location.png" alt="Shoes" /></figure>
+        Justice
+    </span> 
+      <a class="link link-hover">There are many variations of
+        passages of Lorem Ipsum
+        available, but the majority have
+        suffered alteration in some
+        form, by injected humour.
+        </a> 
     </div> 
     <div>
-      <span class="footer-title">Company</span> 
+      <span class="footer-title">Usefull Link</span> 
+      <a class="link link-hover">Home</a> 
       <a class="link link-hover">About us</a> 
-      <a class="link link-hover">Contact</a> 
-      <a class="link link-hover">Jobs</a> 
-      <a class="link link-hover">Press kit</a>
+      <a class="link link-hover">class</a> 
+      <a class="link link-hover">blog</a>
+      <a class="link link-hover">contact us</a>
     </div> 
     <div>
-      <span class="footer-title">Legal</span> 
-      <a class="link link-hover">Terms of use</a> 
-      <a class="link link-hover">Privacy policy</a> 
-      <a class="link link-hover">Cookie policy</a>
+      <span class="footer-title">Contact Now</span> 
+      <a class="link link-hover">555 4th 5t NW, Washington
+        DC 20530, United States</a> 
+      <a class="link link-hover">+88 01750 000 000
+        +88 01750 000 000</a> 
+      <a class="link link-hover">asafayet21@gmail.com</a>
     </div> 
     <div>
-      <span class="footer-title">Newsletter</span> 
+      <span class="footer-title">Subscribe</span> 
       <div class="form-control w-80">
         <label class="label">
-          <span class="label-text">Enter your email address</span>
+          <span class="label-text text-white">Subscribe for our latest &
+            Articles. We Won t Give You
+            Spam Mails</span>
         </label> 
         <div class="relative">
-          <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" /> 
-          <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+          <input type="text" placeholder="email address" class="input input-bordered w-full pr-16" /> 
+          <button class="btn btn-primary absolute top-0 right-0 rounded-l-none"><i class="fa-solid fa-arrow-right"></i></button>
         </div>
       </div>
     </div>
